--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.Project"
         >
         <activity
-            android:name=".auth.AuthActivity"
+            android:name=".modules.auth.AuthActivity"
             android:exported="true"
             android:theme="@style/Theme.Project">
             <intent-filter>
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--        <activity android:name=".recipesList.RecipesListActivity"></activity>-->
+        <activity android:name=".modules.recipesList.RecipesListActivity"></activity>
     </application>
 
 </manifest>
